Add link to 'Find a Medic' in dashboard template

--- a/myproject/accounts/templates/dashboard.html
+++ b/myproject/accounts/templates/dashboard.html
@@ -41,6 +41,9 @@
                 <a href="{% url 'immunization_list' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>✍</span> <span>Immunizations List</span>
                 </a>
+                <a href="{% url 'medic' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                    <span>🩺</span> <span>Find a Medic</span>
+                </a>
                 <a href="{% url 'changeuser' %}" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>⚙️</span> <span>User Settings</span>
                 </a>
