--- a/myproject/accounts/templates/login.html
+++ b/myproject/accounts/templates/login.html
@@ -12,7 +12,7 @@
                 {% csrf_token %}
                 <div class="space-y-4">
                     <div>
-                        <input type="text" name="username" id="username" placeholder="Email" class="w-full px-4 py-2 mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-pink-500">
+                        <input type="text" name="username" id="username" placeholder="Username or Email" class="w-full px-4 py-2 mt-1 border rounded focus:outline-none focus:ring-2 focus:ring-pink-500">
                         {% if form.username.errors %}
                             <p class="text-red-500 text-sm">{{ form.username.errors.0 }}</p>
                         {% endif %}
