Update headings in illness list and medic templates for consistency and improved clarity

--- a/myproject/accounts/templates/medic.html
+++ b/myproject/accounts/templates/medic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Find a Medic</title>
+    <title>Find Medic</title>
     <script src="https://cdn.tailwindcss.com"></script>
     {% load static %}
 </head>
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <h2 class="text-3xl font-bold text-center mt-4">Find a Medic</h2>
+        <h2 class="text-3xl font-bold text-center mt-4">Find Medic</h2>
 
         <div class="mt-6 overflow-x-auto">
             <table class="w-full border-collapse border border-gray-400 text-left text-lg">
