--- a/myproject/accounts/templates/illness_list.html
+++ b/myproject/accounts/templates/illness_list.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="w-full overflow-x-auto">
-            <h3 class="text-2xl font-bold mb-4 text-center text-gray-800">Current Illness List</h3>
+            <h1 class="text-3xl font-bold mb-4 mt-6 text-center text-gray-800">Illness List</h1>
             <table class="w-full border-collapse border border-gray-300 min-w-max">
                 <thead>
                     <tr class="bg-pink-500 text-white">
