--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -16,7 +16,7 @@
                     class="border border-pink-500 p-3 rounded-md text-gray-700 flex-grow w-1/2 focus:outline-none focus:ring-2 focus:ring-pink-500">
             </div>
             <div class="flex items-center">
-                <button onclick="window.location.href=''" 
+                <button onclick="window.location.href='{% url 'dashboard' %}'" 
                     class="bg-pink-500 text-white px-6 py-3 rounded hover:bg-pink-600">
                     Back
                 </button>  
