Refactor child registration: update URL routing to use view function, enable current age and age of admission fields for form submission

--- a/myproject/accounts/templates/registerChild.html
+++ b/myproject/accounts/templates/registerChild.html
@@ -55,7 +55,7 @@
                 </div>
                 <div>
                     <label class="block text-gray-700 text-lg font-semibold">Current Age</label>
-                    <input type="text" id="current_age" name="current_age" class="w-full border p-3 rounded-md text-base" readonly disabled>
+                    <input type="text" id="current_age" name="current_age" class="w-full border p-3 rounded-md text-base" readonly>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 </div>
                 <div>
                     <label class="block text-gray-700 text-lg font-semibold">Age of Admission</label>
-                    <input type="text" id="age_of_admission" name="age_of_admission" class="w-full border p-3 rounded-md text-base" readonly disabled>
+                    <input type="text" id="age_of_admission" name="age_of_admission" class="w-full border p-3 rounded-md text-base" readonly>
                 </div>
             </div>
 
